RESOLVED FIXED309729
REGRESSION(297346@main): Cookie dialog on hillsprofeeding.com is misplaced
https://bugs.webkit.org/show_bug.cgi?id=309729
Summary REGRESSION(297346@main): Cookie dialog on hillsprofeeding.com is misplaced
Charlie Wolfe
Reported 2026-03-11 16:22:48 PDT
...
Attachments
Charlie Wolfe
Comment 1 2026-03-11 16:22:49 PDT
Charlie Wolfe
Comment 2 2026-03-11 16:24:24 PDT
EWS
Comment 3 2026-03-12 09:20:16 PDT
Committed 309147@main (f149f1d42c54): <https://commits.webkit.org/309147@main> Reviewed commits have been landed. Closing PR #60406 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.