REGRESSION(297346@main): Cookie dialog on hillsprofeeding.com is misplaced https://bugs.webkit.org/show_bug.cgi?id=309729 rdar://171393860

Reviewed by Simon Fraser.

The sticky overlap extent added in 297346@main used computeStickyExtent which covers the full
containing block range regardless of whether the page scrolls. This caused false overlap, forcing
multicol content to composite. It also returned early, skipping the normal overlapBounds()
computation.

Intersect the scroll-range inflation with the sticky extent so the result is bounded by both how far
the page can scroll and how far the element can travel in the containing block.

Test: fast/multicol/fixed-inside-columns-with-sticky-sibling.html
* LayoutTests/compositing/layer-creation/sticky-overlap-extent-expected.txt:
* LayoutTests/fast/multicol/fixed-inside-columns-with-sticky-sibling-expected.html: Added.
* LayoutTests/fast/multicol/fixed-inside-columns-with-sticky-sibling.html: Added.
* LayoutTests/platform/mac-sequoia-wk2/compositing/layer-creation/sticky-overlap-extent-expected.txt:
* LayoutTests/platform/mac-sonoma-wk2/compositing/layer-creation/sticky-overlap-extent-expected.txt:
* LayoutTests/platform/mac-wk2/compositing/layer-creation/sticky-overlap-extent-expected.txt:
Update these test expectations to account for the tighter extent.

* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeExtent const):

Canonical link: https://commits.webkit.org/309147@main